tests/baselines/reference/importDeclWithExportModifier.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
importDeclWithExportModifier.ts(5,19): error TS2708: Cannot use namespace 'x' as a value.
importDeclWithExportModifier.ts(5,21): error TS2694: Namespace 'x' has no exported member 'c'.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== importDeclWithExportModifier.ts (2 errors) ====
    namespace x {
        interface c {
        }
    }
    export import a = x.c;
                      ~
!!! error TS2708: Cannot use namespace 'x' as a value.
                        ~
!!! error TS2694: Namespace 'x' has no exported member 'c'.
    var b: a;
    